# mcp-toolkit

./: README.md  main.py  pyproject.toml
examples/: basic_example.py  fastapi_example.py  flask_example.py  lambda_example.py
mcp/: __init__.py  core.py
tests/: __init__.py  test_decorator.py  test_error_handling.py  test_json_rpc.py  test_mcp_core.py  test_type_inference.py
