[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-lite"
version = "0.1.0"
description = "Lightweight decorator-based Model Context Protocol implementation for Python"
authors = [{name = "trg", email = "trg@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mcp", "ai", "llm", "protocol", "decorator", "tools"]
classifiers = [
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/trg/mcp-lite"
Repository = "https://github.com/trg/mcp-lite"
Issues = "https://github.com/trg/mcp-lite/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
